updates as of 27/12

--- a/Reports/Spark/ExtentSpark.html
+++ b/Reports/Spark/ExtentSpark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">MSIL DMC POC Automation Test Suite Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Dec 21, 2023 12:37:22 pm</span></a>
+<a href="#"><span class="badge badge-primary">Dec 27, 2023 10:28:15 am</span></a>
 </li>
 </ul>
 </div>
@@ -71,13 +71,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Dec 21, 2023 12:37:22 pm</h3>
+<h3>Dec 27, 2023 10:28:15 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Dec 21, 2023 12:40:16 pm</h3>
+<h3>Dec 27, 2023 10:32:19 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -148,9 +148,9 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='98%'><b>50</b> steps passed</small></div>
+<div><small data-tooltip='97%'><b>35</b> steps passed</small></div>
 <div>
-<small data-tooltip='1%'><b>1</b> steps failed,
+<small data-tooltip='2%'><b>1</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
@@ -167,7 +167,7 @@
 </div></div>
 <script>
 var timeline = {
-"BS":172.753
+"BS":242.759
 };
 </script>
 <div class="row">
@@ -185,7 +185,7 @@ var timeline = {
 <td>0%</td>
 </tr>
 <tr>
-<td>@BS7</td>
+<td>@BS14</td>
 <td>0</td>
 <td>1</td>
 <td>0</td>
@@ -238,7 +238,7 @@ warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 50,
+passGrandChild: 35,
 failGrandChild: 1,
 warningGrandChild: 0,
 skipGrandChild: 0,
@@ -263,7 +263,7 @@ eventsCount: 5,
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@BS</a><a class="dropdown-item" href="#">@BS7</a>
+<a class="dropdown-item" href="#">@BS</a><a class="dropdown-item" href="#">@BS14</a>
 </ul>
 </li>
 </ul>
@@ -276,7 +276,7 @@ eventsCount: 5,
           <div class="test-detail">
             <p class="name">BS</p>
             <p class="text-sm">
-              <span>12:37:23 pm</span> / <span>00:02:52:753</span>
+              <span>10:28:17 am</span> / <span>00:04:02:759</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -285,9 +285,9 @@ eventsCount: 5,
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">BS</h5>
-<span class='badge badge-success'>12.21.2023 12:37:23 pm</span>
-<span class='badge badge-danger'>12.21.2023 12:40:16 pm</span>
-<span class='badge badge-default'>00:02:52:753</span>
+<span class='badge badge-success'>12.27.2023 10:28:17 am</span>
+<span class='badge badge-danger'>12.27.2023 10:32:19 am</span>
+<span class='badge badge-default'>00:04:02:759</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -299,7 +299,7 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log fail-bg mr-2">Fail</span>BS 7 :  B2C - IGST - Individual - CCP - Extended Warranty -  Exchange</div>
+        <div class="node" id="2"><span class="badge log fail-bg mr-2">Fail</span>BS 14 :  B2B - CGST - Individual</div>
           <div class="status-avatar float-right mr-4">
             <i class="fa fa-paperclip"></i>
           </div>
@@ -309,7 +309,7 @@ eventsCount: 5,
             <div class="card-body l1">
               <div class="card-header">
                 <div class="card-title outline-child">
-                  <div class="node" id="3"><span class="badge log fail-bg mr-2">Fail</span>BS 7 :  B2C - IGST - Individual - CCP - Extended Warranty -  Exchange</div>
+                  <div class="node" id="3"><span class="badge log fail-bg mr-2">Fail</span>BS 14 :  B2B - CGST - Individual</div>
                     <div class="status-avatar float-right">
                       <i class="fa fa-paperclip"></i>
                     </div>
@@ -352,7 +352,7 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And User enters OrderId from scenario 11</span>
+                    <span>And User enters OrderId from scenario 14</span>
       <div>
       </div>
                   </div>
@@ -362,7 +362,7 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And User select from displayed orders for scenario 11</span>
+                    <span>And User select from displayed orders for scenario 14</span>
       <div>
       </div>
                   </div>
@@ -372,17 +372,17 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And if user selects B2B Customer as "No"</span>
+                    <span>And if user selects B2B Customer as "Yes"</span>
       <div>
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And user enters Bill GSTN field from 11</span>
+                    <span>And user enters Bill GSTN field from 14</span>
       <div>
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And user enters all required fields from 11</span>
+                    <span>And user enters all required fields from 14</span>
       <div>
       </div>
                   </div>
@@ -397,12 +397,12 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And user selects Owners Manual Preference for scenario 11</span>
+                    <span>And user selects Owners Manual Preference for scenario 14</span>
       <div>
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And user selects Interested in Loyalty Card, Type of card, Reason for scenario 11</span>
+                    <span>And user selects Interested in Loyalty Card, Type of card, Reason for scenario 14</span>
       <div>
       </div>
                   </div>
@@ -412,12 +412,12 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And user selects state for scenario 11</span>
+                    <span>And user selects state for scenario 14</span>
       <div>
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And user selects city for scenario 11</span>
+                    <span>And user selects city for scenario 14</span>
       <div>
       </div>
                   </div>
@@ -427,7 +427,7 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And selects the dealer for scenario 11 from searched results</span>
+                    <span>And selects the dealer for scenario 14 from searched results</span>
       <div>
       </div>
                   </div>
@@ -437,32 +437,7 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And user selects Extended Warranty for scenario 11</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User clicks on CCP Sale popup</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And Verify if benefit is already selected or select benefit from 11</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User clicks on "OK" button</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>Then Verify if ccp benefit is selected</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User clicks on "NEXT" button</span>
+                    <span>And User clicks on "NEXT" button of Vehicle Details tab</span>
       <div>
       </div>
                   </div>
@@ -472,7 +447,7 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And User selects all required fields on financial info for scenario 11</span>
+                    <span>And User selects all required fields on financial info for scenario 14</span>
       <div>
       </div>
                   </div>
@@ -487,62 +462,12 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And User selects the "Exchange" from old car offers</span>
+                    <span>And User selects the "No Offer" from old car offers</span>
       <div>
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And Click on "LOYALTY EXCHANGE/ADDITIONAL CAR BENEFITS" tab on Additional Details</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User choose Loyalty Card for scenario 11</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User click "OK" button on loyalty card popup</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And Click on "OLD VEHICLE DETAILS" tab on Additional Details</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And Enter reg Num for "Exchange" for scenario 11</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User clicks on "SEARCH" button on popup</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User choose old vehicle for "Exchange" for scenario 11</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And Choose Relation for scenario 11</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User clicks on "OK" button on popup</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User enters Exchange Loyalty bonus for scenario 11</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User enters and select other offers for scenario 11</span>
+                    <span>And User enters and select other offers for scenario 14</span>
       <div>
       </div>
                   </div>
@@ -564,21 +489,20 @@ eventsCount: 5,
                   <div class="step fail-bg">
                     <span>Then Validation on Charge details page</span>
       <div>
-        <textarea disabled class="code-block">java.lang.AssertionError: expected [132.0] but found [133.0]
+        <textarea disabled class="code-block">java.lang.AssertionError: expected [0.66] but found [0.55]
 	at org.testng.Assert.fail(Assert.java:110)
 	at org.testng.Assert.failNotEquals(Assert.java:1413)
-	at org.testng.Assert.assertEqualsImpl(Assert.java:149)
-	at org.testng.Assert.assertEquals(Assert.java:131)
-	at org.testng.Assert.assertEquals(Assert.java:782)
-	at com.dms.stepdefinitions.ChargeDetailsStepDef.validation_on_charge_Detail_page(ChargeDetailsStepDef.java:179)
-	at ✽.Validation on Charge details page(file:///C:/Users/tanugupta02/git/dms_Invoice_UIAutomation/src/test/java/com/dms/featurefiles/BusinessScenarios.feature:399)
+	at org.testng.Assert.assertEquals(Assert.java:727)
+	at org.testng.Assert.assertEquals(Assert.java:762)
+	at com.dms.stepdefinitions.ChargeDetailsStepDef.validation_on_charge_Detail_page(ChargeDetailsStepDef.java:272)
+	at ✽.Validation on Charge details page(file:///C:/Users/tanugupta02/git/dms_Invoice_UIAutomation/src/test/java/com/dms/featurefiles/BusinessScenarios.feature:722)
 </textarea>
       
       </div>
                   </div>
                   <div class="step pass-bg">
                     <span>com.dms.apphooks.ApplicationHooks.tearDown(io.cucumber.java.Scenario)</span>
-      <div>BS_7_:__B2C_-_IGST_-_Individual_-_CCP_-_Extended_Warranty_-__Exchange
+      <div>BS_14_:__B2B_-_CGST_-_Individual
           <div class="row mb-3"><div class="col-md-3">
 <img data-featherlight='../FailedScreenShots/embedded1.png' src="../FailedScreenShots/embedded1.png">
     
@@ -635,11 +559,11 @@ eventsCount: 5,
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>12:37:23 pm</td>
+<td>10:28:17 am</td>
 <td>
-<a href="#" class="linked" test-id='1' id='3'>BS 7 : B2C - IGST - Individual - CCP - Extended Warranty - Exchange</a>
+<a href="#" class="linked" test-id='1' id='3'>BS 14 : B2B - CGST - Individual</a>
 <div class="">
-<span class="badge badge-default">BS.BS 7 : B2C - IGST - Individual - CCP - Extended Warranty - Exchange</span>
+<span class="badge badge-default">BS.BS 14 : B2B - CGST - Individual</span>
 </div>
 </td>
 </tr>
@@ -652,12 +576,12 @@ eventsCount: 5,
 <span class="meta">
 <span class='badge log badge-danger'>1</span>
 </span>
-<p class="name">@BS7</p>
+<p class="name">@BS14</p>
 <p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>@BS7</h4>
+<h4>@BS14</h4>
 <span status="fail" class='badge log badge-danger'>1 failed</span>
 </div>
 <table class='table table-sm mt-4'>
@@ -671,11 +595,11 @@ eventsCount: 5,
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>12:37:23 pm</td>
+<td>10:28:17 am</td>
 <td>
-<a href="#" class="linked" test-id='1' id='3'>BS 7 : B2C - IGST - Individual - CCP - Extended Warranty - Exchange</a>
+<a href="#" class="linked" test-id='1' id='3'>BS 14 : B2B - CGST - Individual</a>
 <div class="">
-<span class="badge badge-default">BS.BS 7 : B2C - IGST - Individual - CCP - Extended Warranty - Exchange</span>
+<span class="badge badge-default">BS.BS 14 : B2B - CGST - Individual</span>
 </div>
 </td>
 </tr>
@@ -723,11 +647,11 @@ eventsCount: 5,
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>12:39:42 pm</td>
+<td>10:31:20 am</td>
 <td>
-<a href="#" class="linked" test-id='1' id='55'>Then Validation on Charge details page</a>
+<a href="#" class="linked" test-id='1' id='40'>Then Validation on Charge details page</a>
 <div class="">
-<span class="badge badge-default">BS.BS 7 : B2C - IGST - Individual - CCP - Extended Warranty - Exchange.Then Validation on Charge details page</span>
+<span class="badge badge-default">BS.BS 14 : B2B - CGST - Individual.Then Validation on Charge details page</span>
 </div>
 </td>
 </tr>
